--- a/.github/workflows/imcf-beta.yml
+++ b/.github/workflows/imcf-beta.yml
@@ -31,6 +31,6 @@ jobs:
           ls -la
           bash ./manage/assemble-fiji-components.sh
 
-      - name: Release to ImageJ update site
+      - name: 📤🎁 Release to ImageJ update site
         run: |
           ./Fiji.app/ImageJ-linux64 --headless --update upload-complete-site --force ${UPDATE_SITE}
