Split job into more smaller steps
This should make the output of the action a bit easier to navigate on
Github.

--- a/.github/workflows/imcf-beta.yml
+++ b/.github/workflows/imcf-beta.yml
@@ -21,16 +21,29 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🌍 Download and 📦 unzip ImageJ/Fiji
+      - name: 🌍 📥 Download Fiji
+        run: curl --silent -O ${IJ_DOWNLOAD_URL}
+
+      - name: 📦 🎈 Unzip Fiji
+        run: unzip fiji-linux64.zip
+
+      - name: 🔁 Add Fiji update site
         run: |
-          curl --silent -O ${IJ_DOWNLOAD_URL}
-          unzip fiji-linux64.zip
-          ./Fiji.app/ImageJ-linux64 --headless --update edit-update-site ${UPDATE_SITE} https://sites.imagej.net/${UPDATE_SITE}/ "webdav:${WIKI_USER}:${UPDATE_PASS}" .
+          ./Fiji.app/ImageJ-linux64 \
+              --headless \
+              --update \
+                  edit-update-site \
+                  ${UPDATE_SITE} \
+                  https://sites.imagej.net/${UPDATE_SITE}/ \
+                  "webdav:${WIKI_USER}:${UPDATE_PASS}" \
+                  .
 
       - name: 👷 Install scripts and artifacts 💎👑 into ImageJ/Fiji
-        run: |
-          bash ./manage/assemble-fiji-components.sh
+        run: bash ./manage/assemble-fiji-components.sh
 
       - name: 🎁 📤 Release to ImageJ update site
         run: |
-          ./Fiji.app/ImageJ-linux64 --headless --update upload-complete-site --force ${UPDATE_SITE}
+          ./Fiji.app/ImageJ-linux64 \
+              --headless \
+              --update upload-complete-site \
+              --force ${UPDATE_SITE}
