--- a/.github/workflows/imcf-beta.yml
+++ b/.github/workflows/imcf-beta.yml
@@ -25,7 +25,7 @@ jobs:
         run: curl --silent -O ${IJ_DOWNLOAD_URL}
 
       - name: 📦 🎈 Unzip Fiji
-        run: unzip fiji-linux64.zip
+        run: unzip -q fiji-linux64.zip
 
       - name: 🔁 Add Fiji update site
         run: |
